--- a/2_Csharp/Ora2_Csharp.csproj
+++ b/2_Csharp/Ora2_Csharp.csproj
@@ -3,9 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_1_Hello_World</RootNamespace>
+    <RootNamespace>Ora2_Csharp</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>2_Csharp</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Util\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Util\" />
+  </ItemGroup>
 </Project>
